Updated course times, added course assistant

--- a/Intro-Quantitative-Geology-handout-2016.tex
+++ b/Intro-Quantitative-Geology-handout-2016.tex
@@ -28,13 +28,19 @@
 
 \section*{Course meetings}
 Mondays 14-16, C108, Physicum (14.3-2.5)\\
-Wednesdays 14-16, D211, Physicum (16.3-4.5)
+Wednesdays 14-16 \textit{and} 16-18, D211, Physicum (16.3-4.5)
 
 \section*{Instructor}
 David Whipp\\
 Office: D430, Exactum\\
 Email: \href{mailto:david.whipp@helsinki.fi}{\texttt{david.whipp@helsinki.fi}}\\
 Phone: (0)2 941 51617
+
+\section*{Course assistant}
+Jorina Sch\"{u}tt\\
+Office: D422, Exactum\\
+Email: \href{mailto:jorina.schutt@helsinki.fi}{\texttt{jorina.schutt@helsinki.fi}}\\
+Phone: (0)45 1865288
 
 \section*{Course website}
 Main course site: \href{https://github.com/Intro-Quantitative-Geology}{\texttt{https://github.com/Intro-Quantitative-Geology}}\\
