Added work session to schedule

--- a/Intro-Quantitative-Geology-handout-2016.tex
+++ b/Intro-Quantitative-Geology-handout-2016.tex
@@ -28,7 +28,8 @@
 
 \section*{Course meetings}
 Mondays 14-16, C108, Physicum (14.3-2.5)\\
-Wednesdays 14-16 \textit{and} 16-18, D211, Physicum (16.3-4.5)
+Wednesdays 14-16 \textit{and} 16-18, D211, Physicum (16.3-4.5)\\
+\textit{Work sessions on Mondays 16-18, A113, Physicum (11.4-2.5)}
 
 \section*{Instructor}
 David Whipp\\
