--- a/Intro-Quantitative-Geology-handout-2016.tex
+++ b/Intro-Quantitative-Geology-handout-2016.tex
@@ -85,10 +85,10 @@ Students are encouraged to discuss and work together on the laboratory exercises
 
 \section*{Grading}
 Course grades will be given using the universal six-level grading scale from 0 to 5.
-Your grade will be based on (1) six laboratory exercise summary write-ups, and (2) a course project (briefly described below).
+Your grade will be based on (1) seven laboratory exercise summary write-ups, and (2) a course project (briefly described below).
 The weight of each item is given below.
 \begin{itemize}
-  \item 50\% - Exercise write-ups (6 in total)
+  \item 50\% - Exercise write-ups (7 in total)
   \item 50\% - Final project report
 \end{itemize}
 Note: Deadlines for exercise write-ups and the term project are \textbf{firm} and given in the schedule on the following pages.
